7/19/11 increase width of dipoles, default is a little difficult to see
7/19/11 add combo box for selecting real molecule
7/19/11 wire up Jmol viewer to controls
7/19/11 integrate Jmol into "Real Molecules" tab
7/19/11 remove dependencies on jmol-phet
7/18/11 feasibility test of many Jmol features
7/18/11 add dependencies on Jmol, create test harness for integration of Jmol with Piccolo
7/13/11 hide clock controls in all modules, this sim has no clock controls
7/12/11 add rudimentary E-field plates
7/12/11 converted to floating control panels
7/11/11 created electronegativity control
7/11/11 created control panels
7/11/11 set up localized strings
7/11/11 created project and set up skeleton