@@ -1,6 +1,8 @@
 // Copyright 2002-2011, University of Colorado
 package edu.colorado.phet.moleculepolarity.common.control;
 
+import java.awt.Color;
+
 import edu.colorado.phet.common.phetcommon.view.controls.PropertyCheckBox;
 import edu.colorado.phet.common.phetcommon.view.util.GridPanel;
 import edu.colorado.phet.moleculepolarity.MPStrings;
@@ -20,7 +22,9 @@ public class ViewControlPanel extends MPControlPanel {
             setAnchor( Anchor.WEST ); // left justified
             add( new PropertyCheckBox( MPStrings.BOND_DIPOLES, properties.bondDipolesVisible ) );
             add( new PropertyCheckBox( MPStrings.MOLECULE_DIPOLES, properties.molecularDipoleVisible ) );
-            add( new PropertyCheckBox( MPStrings.PARTIAL_CHARGES, properties.partialChargesVisible ) );
+            add( new PropertyCheckBox( MPStrings.PARTIAL_CHARGES, properties.partialChargesVisible ) {{
+                setForeground( Color.RED );
+            }} );
         }} );
     }
 }
